update: register and login
