# packages/backend/src/auth/auth.controller.ts
@@ -2,9 +2,11 @@ import { Body, Controller, Get, Post, Request, UseGuards } from '@nestjs/common'
 import { AuthService } from './auth.service';
 import { LocalAuthGuard } from './passport/local-auth.guard';
 import { Public } from './decorator/customize';
-import { CreateAuthDto, UserLoginDto } from './dto/create-auth.dto';
+import { CheckCodeDto, CreateAuthDto, RegisterResponseDto, UserLoginDto } from './dto/create-auth.dto';
 import { MailerService } from '@nestjs-modules/mailer';
 import { ApiResponse, ApiTags } from '@nestjs/swagger';
+import { ResponseMessage } from '@/decorator/customize';
+import { PostAPI } from '@/decorator/custom.decorators';
 
 @ApiTags('Auth')
 @Controller('auth')
@@ -17,21 +19,19 @@ export class AuthController {
   @Post('login')
   @Public()
   @UseGuards(LocalAuthGuard)
+  @ResponseMessage('Login successfully')
   @ApiResponse({
     status: 201,
-    description: 'User successfully registered',
+    description: 'User successfully login',
     type: UserLoginDto,
   })
   async handleLogin(@Request() { user }: { user: UserLoginDto }) {
-    const result = await this.authService.login(user);
-
-    console.log(result);
-    return result;
+    return this.authService.login(user);
   }
 
-  @Post('register')
+  @PostAPI('register', { type: RegisterResponseDto })
   @Public()
-  handleRegister(@Body() registerDto: CreateAuthDto) {
+  async handleRegister(@Body() registerDto: CreateAuthDto) {
     return this.authService.handleRegister(registerDto);
   }
 
@@ -53,5 +53,17 @@ export class AuthController {
     } catch (error) {
       console.log(error);
     }
+  }
+
+  @Post('check-code')
+  @Public()
+  @ResponseMessage('Check code successfully')
+  @ApiResponse({
+    status: 201,
+    description: 'User successfully check code',
+    type: RegisterResponseDto,
+  })
+  checkCode(@Body() checkCodeDto: CheckCodeDto) {
+    return this.authService.checkCode(checkCodeDto);
   }
 }
